# product-key-memory

./: README.md  pyproject.toml  setup.py  train.py
product_key_memory/: __init__.py  evonorm.py  product_key_memory.py  transformer.py
